--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -29,7 +29,5 @@ clean:
 	rm -f $(foreach suffix,$(REMOVE_SUFFIX_LIST),*.$(suffix))
 	rm -f src/*.aux
 	rm -f figure/*.xbb
-
-# make tex source text for submmit
-src:
-	python3 summrize_tex_src.py
+	# make summarized tex source file (for submmit)
+	python3 summarize_tex_src.py 
